Push footer down using flex styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,21 @@
     text-decoration: none;
     scroll-behavior: smooth;
 }
+body{
+    background-color: #ffffff;
+    color: #0b0a0af1;
+    overflow-x: hidden;
+    min-width: 320px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 header{
     background-color: aqua;
 }
 main{
     background-color: bisque;
+    flex: 1 0 auto;
 }
 footer{
     background-color: blue;
