Change color of the links to white in navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,9 @@ body{
     color: #f0f8ff;
     height: 15vh;
 }
+.nav-links a{
+    color:#f0f8ff;
+}
 /*header section*/
 main{
     background-color: bisque;
