--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,9 @@ body{
     letter-spacing: 1px;
     transition: all .45s ease;
 }
+.logo:hover{
+    transform: scaleX(1.3);
+}
 /*header section*/
 main{
     background-color: bisque;
