--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,19 @@ body{
 .logo:hover{
     transform: scaleX(1.3);
 }
+.menu{
+    display: flex;
+    font-size: 18px;
+}
+.menu li{
+    padding: 5px 10px;
+    font-size: 17px;
+    font-weight: 500;
+    color: #f0f8ff;
+    margin: 0 15px;
+    transition: all ease .50s;
+    text-transform: uppercase;
+}
 /*header section*/
 main{
     background-color: bisque;
