Add hover effect to navbar list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,10 @@ body{
     transition: all ease .50s;
     text-transform: uppercase;
 }
+.menu li a:hover{
+    transition: all .3s;
+    color:#F1E805;
+}
 /*header section*/
 main{
     background-color: bisque;
