--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,22 @@ body{
     position: relative;
     width: 24px;
 }
+.hamburger-line::before,
+.hamburger-line::after{
+    background-color: #f0f8ff;
+    content: '';
+    display: block;
+    position: absolute;
+    transition: all .3s;
+    width: 100%;
+    height: 100%;
+}
+.hamburger-line::before{
+    top: 7px;
+}
+.hamburger-line::after{
+    top: -7px;
+}
 /*header section*/
 main{
     background-color: bisque;
