--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,3 +102,36 @@ main{
 footer{
     background-color: blue;
 }
+
+/*Media header, footer and general*/
+@media(max-width:1100px){
+    h1{
+        font-size: 4.5rem;
+        transition: .1s;
+    }
+    h2{
+        font-size: 2.3rem;
+        transition: .1s;
+    }
+    h3, h4{
+        font-size: 1.8rem;
+        transition: .1s;
+    }
+    p, h5, h6{
+        font-size: 1rem;
+        transition: .1s;
+    }
+    .home-text{
+        font-size: 2.5rem;
+    }
+    .home{
+        height: 87vh;
+    }
+    
+    .botton a{
+    font-size: 11px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    }
+}
