--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,10 +99,11 @@ main{
     background-color: bisque;
     flex: 1 0 auto;
 }
-footer{
-    background-color: blue;
+/*Footer section*/
+#contact{
+    background: #1d1e1ee8;
 }
-
+/*Footer section*/
 /*Media header, footer and general*/
 @media(max-width:1100px){
     h1{
