Add styles to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,43 @@ main{
 #contact{
     background: #1d1e1ee8;
 }
+.main{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.footer{
+    padding: 20px 0;
+}
+.list{
+    width: 25%;
+    
+}
+.list h4{
+    font-size: 18px;
+    color: #f0f8ff;
+    margin-bottom: 30px;
+    position: relative;
+}
+.list h4::before{
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 60px;
+    left: 0;
+    bottom: -10px;
+    background: #26c4cd;
+}
+.list ul li:not(:last-child){
+    margin-bottom: 16px;
+}
+.list ul li a{
+    color: #f0f8ff;
+    display: block;
+    transition: .3s;
+}
 /*Footer section*/
 /*Media header, footer and general*/
 @media(max-width:1100px){
