--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,30 @@ main{
     color: #F1E805;
     transform: translateX(14px);
 }
+.social a{
+    height: 40px;
+    width: 40px;
+    background: #26c4cd;
+    color: #f0f8ff;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 21px;
+    border-radius: 15px;
+    transition: .3s;
+}
+.list .social a:hover{
+    transform: scale(1.06);
+}
+.end-text{
+    text-align: center;
+    padding-bottom: 50px;
+}
+.end-text p{
+    color: #c4c5c6;
+    font-size: 14px;
+    letter-spacing: 2px;
+}
 /*Footer section*/
 /*Media header, footer and general*/
 @media(max-width:1100px){
