--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,12 @@ main{
     justify-content: center;
     }
 }
+@media (max-width:1040px){
+    .list{
+        width: 50%;
+        margin-bottom: 12px;
+    }
+}
 @media(max-width:768px){
     .menu{
        display: none;
