--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,9 @@ body{
 main{
     flex: 1 0 auto;
 }
+section{
+    padding: 0 13px 30px 13px;
+}
 /*header section*/
 .navbar{
     display: flex;
