Style button in home section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,6 +166,16 @@ section{
     align-items: center;
     justify-content: center;
 }
+.btn{
+    display: inline-block;
+    padding: 12px 28px;
+    background: #26c4cd;
+    border-radius: 5px;
+    color: #f0f8ff;
+    letter-spacing: 1px;
+    font-weight: 600;
+    transition: all .45s ease;
+}
 /*Home section*/
 /*Footer section*/
 #contact{
