Add background image to home section and style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,18 @@ section{
 .btn:hover{
     transform: scale(0.9);
 }
+.home-img{
+    width: 30vw;
+    height: 30vh;
+}
+.home-img{
+    flex: 1;
+    background: url('../images/aleksandra\ new.jpg') no-repeat; /* Replace with your image path */
+    background-size: contain;
+    background-position: 83%;
+    height: 100%; 
+   margin-bottom: 20px;
+}
 /*Home section*/
 /*Footer section*/
 #contact{
