Style about page for tablet and phone screens

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -77,3 +77,40 @@
     margin-bottom: 4rem;
     margin-right: 20px;
 }
+
+@media (max-width: 768px) {
+    .about{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        gap:1.5;
+    }
+    .directions{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        gap:1.5;
+        padding-top: 0;
+    }
+    .about-hi{
+        text-align: center;
+    }
+    .about-text p {
+        padding-right: 3rem;
+        text-align: left;
+    }
+    .about-text2 p {
+        padding-right: 3rem;
+        text-align: left;
+    }
+    .about-text h2{
+        text-align: center;
+    }
+    .about-text h4{
+        text-align: center;
+    }
+    .about-text2 h4{
+        text-align: center;
+    }
+    
+}
