--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -19,3 +19,17 @@ h2.title::after{
 h2 span{
     color: #26c4cd;
 }
+.gallery-list{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+    font-size: 0;
+    margin-top: 30px;
+}
+.gallery-item{
+    display: block;
+    flex: 25%;
+    overflow: hidden;
+    position: relative;
+}
