--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -33,3 +33,22 @@ h2 span{
     overflow: hidden;
     position: relative;
 }
+.gallery-item-hover{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, .7);
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    opacity: 0;
+    transition: opacity .5s ease;
+    z-index: 2;
+}
+.gallery-item:hover .gallery-item-hover{
+    opacity: 1;
+}
