--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -52,3 +52,18 @@ h2 span{
 .gallery-item:hover .gallery-item-hover{
     opacity: 1;
 }
+.gallery-item:hover img{
+    transform: scaleX(1.3); rotate: (5deg);
+}
+.gallery-item img{
+    max-width: 100%;
+    height: auto;
+    transition: all .5s ease;
+}
+.gallery-item img {
+    object-fit: cover;
+    max-width: 100%;
+    height: 100%;
+    transition: all .5s ease;
+    cursor: pointer;
+}
