--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -23,3 +23,18 @@
     border-radius: 10px;
     margin-bottom: 20px;
 }
+.contact-inputs{
+    width: 400px;
+    height: 50px;
+    border: solid #546869;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #26c4cd;
+    border-radius: 50px;
+}
+.contact-left textarea{
+    height: 140px;
+    padding-top: 15px;
+    border-radius: 20px;
+}
