--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -38,3 +38,24 @@
     padding-top: 15px;
     border-radius: 20px;
 }
+.contact-inputs:focus{
+    border:2px solid #F1E805;
+}
+.contact-inputs::placeholder{
+    color:#546869
+}
+.contact-left button{
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
+    font-size: 16px;
+    color:#fff;
+    gap:10px;
+    border:none;
+    border-radius: 50px;
+    background-color: #26c4cd;
+    cursor: pointer;
+}
+.contact-left button:hover{
+    transform: scale(0.9);
+}
