--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -59,3 +59,12 @@
 .contact-left button:hover{
     transform: scale(0.9);
 }
+
+@media (max-width:800px){
+    .contact-inputs{
+        width: 80vw;
+    }
+    .contact-right{
+        display: none;
+    }
+}
